# mlops-platform-llm-rag

./: .env-template  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
bento-embedding-service/: Dockerfile  bentofile.yaml  pyproject.toml  service.py
bento-model-service/: Dockerfile  bentofile.yaml  pyproject.toml  service.py
docs/: OVERVIEW.md
grafana/dashboards/: rag-dashboard.json
grafana/provisioning/dashboards/: dashboard.yaml
mlflow-server/: Dockerfile  pyproject.toml
postgres-init/: init.sql
prometheus/: prometheus.yml
rag-orchestrator/: Dockerfile
rag-orchestrator/app/: app.py  pyproject.toml
rag-orchestrator/app/src/: config.py  lakefs_store.py  mongo_logger.py  rag.py  schema.py  utils.py
streamlit-app/: Dockerfile  app.py  pyproject.toml
