[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "lakefs>=0.11.1",
    "prometheus-client>=0.22.0",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
